# Charger

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: gtest.cmake
src/: CMakeLists.txt
src/CommandLineArgsComponent/: CMakeLists.txt
src/CommandLineArgsComponent/include/Charger/CommandLineArgs/: Arguments.hpp  Stub.hpp
src/CommandLineArgsComponent/src/: Arguments.cpp  Stub.cpp
src/HttpComponent/: CMakeLists.txt
src/HttpComponent/Client/: CMakeLists.txt  README.md
src/HttpComponent/Client/include/Charger/Http/Client/: ISpeaker.hpp
src/HttpComponent/Client/include/Charger/Http/Client/Domain/: Request.hpp
src/HttpComponent/Client/include/Charger/Http/Client/curl/: Speaker.hpp
src/HttpComponent/Client/src/: ISpeaker.cpp
src/HttpComponent/Client/src/Domain/: Request.cpp
src/HttpComponent/Client/src/curl/: Speaker.cpp
src/HttpComponent/Server/: CMakeLists.txt  README.md
src/HttpComponent/Server/imported/: CMakeLists.txt  libevent.cmake
src/HttpComponent/Server/include/Charger/Http/Server/: AbstractHandler.hpp  IListener.hpp
src/HttpComponent/Server/include/Charger/Http/Server/Domain/: Context.hpp  Response.hpp
src/HttpComponent/Server/include/Charger/Http/Server/libevent/: Listener.hpp  Parser.hpp
src/HttpComponent/Server/src/: AbstractHandler.cpp
src/HttpComponent/Server/src/Domain/: Context.cpp  Response.cpp
src/HttpComponent/Server/src/libevent/: Listener.cpp  Parser.cpp
src/HttpComponent/include/Charger/Http/: Response.hpp
src/HttpComponent/src/: Response.cpp
src/HttpServerComponent/: CMakeLists.txt  README.md
src/HttpServerComponent/cmake_modules/: FindLibEvent.cmake
src/HttpServerComponent/include/Charger/HttpServer/: AbstractHandler.hpp  IHandler.hpp  IServer.hpp  ParserLibevent.hpp  ServerLibEvent.hpp
src/HttpServerComponent/include/Charger/HttpServer/Domain/: Context.hpp  Response.hpp
src/HttpServerComponent/include/Charger/HttpServer/libevent/: Parser.hpp  Server.hpp
src/HttpServerComponent/src/: AbstractHandler.cpp  ParserLibevent.cpp  ServerLibEvent.cpp
src/HttpServerComponent/src/Domain/: Context.cpp  Response.cpp
src/HttpServerComponent/src/libevent/: Parser.cpp  Server.cpp
src/NamedArgsComponent/: CMakeLists.txt  README.md
src/NamedArgsComponent/include/Charger/NamedArgs/: Parser.hpp  TagRegister.hpp
src/NamedArgsComponent/src/: Stub.cpp
src/include/WebDAV/Interfaces/: IWebDav.hpp
src/src/Interfaces/: IWebDav.cpp
tests/: CMakeLists.txt
tests/CommandLineArgs_test/: CMakeLists.txt
tests/CommandLineArgs_test/include/Tests/: Fixation.hpp
tests/CommandLineArgs_test/src/: Fixation.cpp  Tests.cpp
tests/Http_test/: CMakeLists.txt
tests/Http_test/include/Handlers/: Handler.hpp
tests/Http_test/src/: main.cpp
tests/Http_test/src/Handlers/: Handler.cpp
tests/Http_test/src/TestCases/: ClientTests.cpp  RequestTests.cpp  ResponseTests.cpp
tests/NamedArgs_test/: CMakeLists.txt
tests/NamedArgs_test/include/Tests/: BaseClass.hpp  ChildClass.hpp  ConfigureClass.hpp
tests/NamedArgs_test/src/: BaseClass.cpp  MainTests.cpp
tests/NamedArgs_test/src/TestCases/: MainTests.cpp
