set(COMPONENT_NAME "Http")
set(COMPONENT ${PROJECT_NAME}_${COMPONENT_NAME})

file(GLOB_RECURSE HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp")
file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

add_library(${COMPONENT}
  ${HEADERS}
  ${SOURCES}
)

target_include_directories(${COMPONENT}
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/${COMPONENT_NAME}
)

add_library(${PROJECT_NAME}::${COMPONENT_NAME} ALIAS ${COMPONENT})

if(CHARGER_ENABLE_HTTP_SERVER)
  add_subdirectory(Server)
endif(CHARGER_ENABLE_HTTP_SERVER)

if(CHARGER_ENABLE_HTTP_CLIENT)
  add_subdirectory(Client)
endif(CHARGER_ENABLE_HTTP_CLIENT)
